app/assets/stylesheets/less/_yobiUI.less
/* ... */
.dropdown-menu {
    &.flat {
        top:100%;
        left:0;
        display: block;
        position:absolute;
        background-clip: padding-box;
        .border-radius(6px);
        .box-shadow(none);
        font-size:12px;
        background-color:@yobi-white;
        overflow:visible;
        .opacity(0);
        .transition(all 0.25s ease);
        visibility: hidden;
        -webkit-backface-visibility: hidden;
        margin-top:-10px;
        .box-shadow(0 2px 10px rgba(0,0,0,.2));
        border: 1px solid #ccc;
        border-color: rgba(0,0,0,.2);

        color: @yobi-white;
        padding: 4px 0 6px;

        &:before {
            content: " ";
            border-color: transparent;
            border-style: dashed dashed solid;
            border-width: 0 8px 8px;
            position: absolute;
            left: 7px;
            z-index: 1;
            height: 0;
            width: 0;
            -webkit-animation: gb__a .2s;
            animation: gb__a .2s;
            border-bottom-color: #ccc;
            border-bottom-color: rgba(0,0,0,.2);
            top: -8px;
        }

        &:after {
            content: " ";
            border-color: transparent;
            border-bottom-color: @yobi-white;
            border-style: dashed dashed solid;
            border-width: 0 8px 8px;
            position: absolute;
            left: 7px;
            top: -7px;
            z-index: 1;
            height: 0;
            width: 0;

        }

        .pop-title {
            .border-radius(3px);
            background: @yobi-cyan-light;
            padding:3px 0;
            padding: 3px 11px 5px;
            margin:5px 3px;
            font-weight:bold;
            color:#333;
            font-size:14px;
            white-space:nowrap;

            &:first-child {
               margin-top: 0px;
            }

        }

        .pop-content {
            font-size:12px;
            padding:10px 15px;
            white-space:nowrap;
            text-align:left;
            color:#292929;

            background-color:@yobi-white;

            p {
                line-height:20px;
                margin:0;
                padding:0;
            }

            &.btn-wrap{
                margin-top:0;
                padding-top:0;
                text-align:center;
            }
        }

        li {
            margin: 0 5px 2px !important;
            white-space:nowrap;
            float:none !important;
            background-color:@yobi-white;
            color:#292929;

            &:first-child, &:last-child {
                > a {
                    color:#292929;
                    border-radius: 2px;
                    padding-bottom: 7px;
                    padding-top: 5px;
                }
            }

            &.active, &:selected {
                > a {
                    background: rgba(255,255,255,0.25);
                    color:#292929;
                    position: relative;
                    z-index: 1;
                }
            }

            &.empty {
                padding:3px;
                text-align:center;
            }

            dt {
              padding-left: 11px;
              padding-right: 11px;
            }

            &.divider {
                margin-left: 11px;
                margin-right: 11px;
            }

            &.title {
                .border-radius(3px);
                background:@yobi-cyan-light;
                padding:3px 0;
                padding: 3px 11px 5px;
                margin:5px 3px;
                font-weight:bold;
                color:#333;
                &:first-child {
                   margin-top: 0px;
                }
            }

            > a {
                .border-radius(3px);
                color:#292929;
                padding: 3px 5px 5px 15px;
                background-color:transparent !important;
                .transition(all 0.2s ease);


                &:hover, &:active, &:focus {
                    .border-radius(3px) !important;
                    background-color: rgba(0,0,0,0.15) !important;
                }

                &.highlighted {
                    background: #526476;
                     &:hover, &:active, &a:focus {
                        background: #fff;
                    }
                }

                &.ybtn {
                    display:inline-block;
                    height:auto;
                }
            }

            .disabled {
                color:#ccc;
                font-size:0.8em;
            }
        }

        &.right {
            left:auto;
            right:0px;

            &:before, &:after {
                right: 7px;
                left: auto;
            }
        }

        &.maximum {
            max-height: 500px;
            overflow-y: auto;
        }
    }
}

.open {
    > .flat {
        .opacity(100);
        visibility:visible;
        margin-top:12px;
    }
}


.tooltip {
    white-space:nowrap;
}

.btn-transparent {
    background:transparent;
    border:0;
    outline:none;
}

.btn-transparent-with-fontsize-lineheight {
    background:transparent;
    border:0;
    outline:none;
    font-size:0;
    line-height:20px;
}

.numberic {
    display:inline-block;
    margin-left:5px;
    font-size:10px;
    border:2px solid #FFF;
    line-height:15px;
    padding:0 5px;
    background-color:@yobi-primary;
    color:#ECF0F1;
    .border-radius(10px);

    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
    -o-box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
    box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
}
/* ... */

